# TinyToys

./: .clang-format  CMakeLists.txt  README.md
fit_line_contour/: CMakeLists.txt  core.cpp  core.h  main.cpp
merge_img_cuda/: CMakeLists.txt  laplacianFilter.cu  sobelEdgeDetectionFilter.cu  stack_img.cpp  stack_img.cu  stack_img.h  tvFilter.cu
tensor_lib/: AdvancedIndexing.cpp  AdvancedIndexing.h  Blob.h  CMakeLists.txt  CPUInfo.cpp  CUDAUtils.cpp  CUDAUtils.h  Device.cpp  Device.h  Dispatch.h  Dtype.cpp  Dtype.h  EigenConverter.cpp  EigenConverter.h  Helper.cpp  Indexer.cpp  Indexer.h  Logging.cpp  Logging.h  MemoryManager.cpp  MemoryManager.h  MemoryManagerCPU.cpp  MemoryManagerCUDA.cpp  MemoryManagerCached.cpp  MemoryManagerStatistic.cpp  MemoryManagerStatistic.h  Parallel.cpp  ParallelFor.h  SYCLUtils.cpp  SYCLUtils.h  Scalar.h  ShapeUtil.cpp  ShapeUtil.h  SizeVector.cpp  SizeVector.h  SmallVector.cpp  Tensor.cpp  Tensor.h  TensorCheck.cpp  TensorCheck.h  (+7 more)
tensor_lib/kernel/: Arange.cpp  Arange.h  ArangeCPU.cpp  ArangeCUDA.cu  BinaryEW.cpp  BinaryEW.h  BinaryEWCPU.cpp  BinaryEWCPU.ispc  BinaryEWCUDA.cu  GeometryMacros.h  IndexGetSet.cpp  IndexGetSet.h  IndexGetSetCPU.cpp  IndexGetSetCUDA.cu  IndexReduction.cpp  IndexReduction.h  IndexReductionCPU.cpp  IndexReductionCUDA.cu  Kernel.cpp  Kernel.h  NonZero.cpp  NonZero.h  NonZeroCPU.cpp  NonZeroCUDA.cu  Reduction.cpp  Reduction.h  ReductionCPU.cpp  ReductionCUDA.cu  UnaryEW.cpp  UnaryEW.h  UnaryEWCPU.cpp  UnaryEWCPU.ispc  UnaryEWCUDA.cu  UnaryEWSYCL.cpp
tensor_lib/linalg/: AddMM.cpp  AddMM.h  AddMMCPU.cpp  AddMMCUDA.cpp  BlasWrapper.h  Det.cpp  Det.h  Inverse.cpp  Inverse.h  InverseCPU.cpp  InverseCUDA.cpp  LU.cpp  LU.h  LUCPU.cpp  LUCUDA.cpp  LUImpl.h  LapackWrapper.h  LeastSquares.cpp  LeastSquares.h  LeastSquaresCPU.cpp  LeastSquaresCUDA.cpp  LinalgHeadersCPU.h  LinalgHeadersCUDA.h  LinalgUtils.cpp  LinalgUtils.h  Matmul.cpp  Matmul.h  MatmulCPU.cpp  MatmulCUDA.cpp  SVD.cpp  SVD.h  SVDCPU.cpp  SVDCUDA.cpp  Solve.cpp  Solve.h  SolveCPU.cpp  SolveCUDA.cpp  Tri.cpp  Tri.h  TriCPU.cpp  (+2 more)
tensor_lib/linalg/kernel/: Matrix.h  SVD3x3.h
test/: CMakeLists.txt  test_fitline.cpp  test_mergeimg.cpp  test_tensor.cpp
